<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top"
    tools:context=".Register">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="933dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_marginTop="-30dp"
                android:src="@drawable/page" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="225dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitoo"
                    android:text="@string/welcome"
                    android:textColor="#ffffff"
                    android:textSize="30dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-5dp"
                    android:fontFamily="@font/nunitoo"
                    android:text="@string/reglog"
                    android:textColor="#ffffff"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitoo"
                    android:text="@string/judul3"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />

            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardHeader1"
                android:layout_width="match_parent"
                android:layout_height="590dp"
                android:layout_marginTop="330dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                app:cardCornerRadius="20dp"
                app:cardElevation="7dp"
                app:cardMaxElevation="@dimen/cardview_default_elevation">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="400dp">


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/nunitoo"
                    android:text="Pendaftaran Akun"
                    android:textAlignment="center"
                    android:textColor="@color/endcolor"
                    android:textSize="30dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/nunitoo"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/activity_vertical_margin"
                        android:textColor="@color/teksindex"
                        android:textColorHint="@color/teksmenu" />

                    <EditText
                        android:id="@+id/nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/nunitoo"
                        android:hint="@string/nama"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/activity_vertical_margin"
                        android:textColor="@color/teksindex"
                        android:textColorHint="@color/teksmenu" />

                    <EditText
                        android:id="@+id/alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/nunitoo"
                        android:hint="@string/alamat"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/activity_vertical_margin"
                        android:textColor="@color/teksindex"
                        android:textColorHint="@color/teksmenu" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/nunitoo"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/activity_vertical_margin"
                        android:textColor="@color/teksindex"
                        android:textColorHint="@color/teksmenu" />

                    <EditText
                        android:id="@+id/no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/nunitoo"
                        android:hint="@string/telepon"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/activity_vertical_margin"
                        android:textColor="@color/teksindex"
                        android:textColorHint="@color/teksmenu" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/nunitoo"
                        android:hint="@string/password"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/activity_vertical_margin"
                        android:textColor="@color/teksindex"
                        android:textColorHint="@color/teksmenu" />

                    <EditText
                        android:id="@+id/repassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:fontFamily="@font/nunitoo"
                        android:hint="@string/repassword"
                        android:inputType="textPassword"
                        android:padding="@dimen/activity_vertical_margin"
                        android:textColor="@color/teksindex"
                        android:textColorHint="@color/teksmenu" />

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_background"
                        android:fontFamily="@font/nunito"
                        android:text="@string/register"
                        android:textColor="@color/colorWhite"
                        android:textSize="20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sudah"
                            android:textAlignment="center"
                            android:textSize="14dp" />

                        <TextView
                            android:layout_marginLeft="5dp"
                            android:id="@+id/login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito"
                            android:text="Login"
                            android:textAlignment="center"
                            android:textSize="14dp" />
                    </LinearLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>