<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top"
    tools:context=".uploadBerkas.PengajuanBerkasSelesai">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="-30dp"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:src="@drawable/page" />

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginTop="225dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#ffffff"
                android:textSize="30dp"
                android:fontFamily="@font/nunitoo"
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:layout_marginTop="-5dp"
                android:fontFamily="@font/nunitoo"
                android:text="@string/reglog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:fontFamily="@font/nunitoo"
                android:text="@string/judul3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_marginTop="330dp"
            android:id="@+id/cardHeader1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            app:cardElevation="7dp"
            app:cardMaxElevation="@dimen/cardview_default_elevation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:fontFamily="@font/nunitoo"
                android:layout_marginTop="10dp"
                android:textSize="26dp"
                android:textAlignment="center"
                android:text="@string/cekpengajuan"
                android:textColor="@color/endcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="129dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:fontFamily="@font/nunitoo"
                    android:hint="@string/ceksukses"
                    android:inputType="textPassword"
                    android:padding="@dimen/activity_vertical_margin"
                    android:textColor="@color/teksindex"
                    android:textColorHint="@color/teksmenu"
                    android:textSize="14dp" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_background"
                    android:fontFamily="@font/nunito"
                    android:text="@string/btncekpengajuan"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp" />

            </LinearLayout>



        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>