<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top"
    tools:context=".main.Syarat">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/kembali"
            android:layout_width="42dp"
            android:layout_height="29dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/back"></ImageView>

        <ImageView
            android:layout_marginTop="0dp"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/page" />

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginTop="210dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#ffffff"
                android:textSize="30dp"
                android:fontFamily="@font/nunitoo"
                android:text="@string/syarat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:layout_marginTop="-5dp"
                android:fontFamily="@font/nunitoo"
                android:text="@string/menara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_marginTop="290dp"
            android:id="@+id/cardHeader1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            app:cardElevation="7dp"
            app:cardMaxElevation="@dimen/cardview_default_elevation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="500dp">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:fontFamily="@font/nunito"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:textAlignment="center"
                android:text="@string/ceksyarat"
                android:textColor="@color/endcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunitoo"
                        android:hint="@string/isisyarat"
                        android:textColor="@color/teksindex" />


                </LinearLayout>

            </LinearLayout>




        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</androidx.core.widget.NestedScrollView>