<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".main.Cell">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:foregroundGravity="center"
                android:src="@drawable/bg_blue"></ImageView>

            <ImageView
                android:id="@+id/kembali"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="42dp"
                android:layout_height="29dp"
                android:src="@drawable/back">
            </ImageView>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:textColor="#ffffff"
                android:textSize="25dp"
                android:fontFamily="@font/nunitoo"
                android:text="@string/cell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="389dp"
                android:layout_height="44dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="95dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitoo"
                    android:text="@string/ptsub"
                    android:textColor="@color/colorGray"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/pt_alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitoo"
                    android:text="@string/alamatpt"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="130dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_buah"
            tools:listitem="@layout/list_status"/>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>